--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Web Developer Ramy 🌐</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com"> 
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lexend+Zetta&display=swap" rel="stylesheet">
 
@@ -57,6 +59,8 @@
         <p>I have high Mathematical skills and possess extensive knowledge and advanced aspects of Mathematics that I understand very easily; I'm well versed in topics such as Calculus, Linear Algebra and Differentiation.</p>
       </div>
     </div>
+    <hr>
+    <button class= "buty mx-auto text-center">Portfolio</button>
     <hr>
     <div class="contact-me">
       <h2 class=getintouchheader>Get In Touch</h2>
