--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </div>
     <hr>
-    <button class= "buty mx-auto text-center" onclick="window.location.href='https://www.youtube.com/';">Portfolio</button>
+    <button class= "buty mx-auto text-center" onclick="window.location.href='portfolio.html';">Portfolio</button>
     <hr>
     <div class="contact-me">
       <h2 class=getintouchheader>Get In Touch</h2>
