--- a/portfolio.html
+++ b/portfolio.html
@@ -126,7 +126,7 @@
                 <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" src="img/portfolio/Bulldogy Snuggle Screenshot.png"
+            <img class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" src="img/portfolio/Bulldogy Snuggle Screenshot.PNG"
               alt="">
           </a>
           <div class="portfolio-caption">
@@ -142,7 +142,7 @@
                 <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" src="img/portfolio/Note Taking Web App Screenshot.png"
+            <img class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" src="img/portfolio/Note Taking Web App Screenshot.PNG"
               alt="">
           </a>
           <div class="portfolio-caption">
@@ -158,7 +158,7 @@
                 <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" src="img/portfolio/Daily Journal Screenshot.png"
+            <img class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" src="img/portfolio/Daily Journal Screenshot.PNG"
               alt="">
           </a>
           <div class="portfolio-caption">
@@ -175,7 +175,7 @@ your loved ones can post online their daily journal</p>
                 <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" src="img/portfolio/Secrets Screenshot.png"
+            <img class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" src="img/portfolio/Secrets Screenshot.PNG"
               alt="">
           </a>
           <div class="portfolio-caption">
@@ -192,7 +192,7 @@ like an application called Whisper</p>
                 <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" src="img/portfolio/YouExpress Screenshot.png"
+            <img class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" src="img/portfolio/YouExpress Screenshot.PNG"
               alt="">
           </a>
           <div class="portfolio-caption">
@@ -208,7 +208,7 @@ like an application called Whisper</p>
                 <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" src="img/portfolio/Newsletter Screenshot.png"
+            <img class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" src="img/portfolio/Newsletter Screenshot.PNG"
               alt="">
           </a>
           <div class="portfolio-caption">
@@ -725,7 +725,7 @@ like an application called Whisper</p>
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Bulldogy Snuggle</h2>
                 <p class="item-intro text-muted">Purchase Bulldogs</p>
-                <img class="img-responsive img-centered img-fluid" src="img/portfolio/Bulldogy Snuggle Screenshot.png" alt="main-page">
+                <img class="img-responsive img-centered img-fluid" src="img/portfolio/Bulldogy Snuggle Screenshot.PNG" alt="main-page">
                 <!-- <img class="img-responsive img-centered" src="img/portfolio/Bulldogy Snuggle Screenshot.png" alt="settings-page"> -->
                 <p>I developed a simple front end web application to find and purchase Bulldogs 
                   <br>
@@ -775,7 +775,7 @@ like an application called Whisper</p>
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Notebooky</h2>
                 <p class="item-intro text-muted">Advanced Notebook and Notes Taking Web Application</p>
-                <img class="img-responsive img-centered img-fluid" src="img/portfolio/Note Taking Web App Screenshot.png" alt="">
+                <img class="img-responsive img-centered img-fluid" src="img/portfolio/Note Taking Web App Screenshot.PNG" alt="">
                 <p>Take notes with ease and style</p>
                 <p>
                   <strong>
@@ -816,7 +816,7 @@ like an application called Whisper</p>
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Daily Interactive Journal</h2>
                 <p class="item-intro text-muted">Take Interactive Daily Journals with you and your friends</p>
-                <img class="img-responsive img-centered img-fluid" src="img/portfolio/Daily Journal Screenshot.png" alt="main-page">
+                <img class="img-responsive img-centered img-fluid" src="img/portfolio/Daily Journal Screenshot.PNG" alt="main-page">
                 <p>Developed using JavaScript mainly.</p>
                 <p>
                   <strong>
@@ -858,7 +858,7 @@ like an application called Whisper</p>
                 <h2 class="text-uppercase">Secrets</h2>
                 <p class="item-intro text-muted">Secrets website where you can post anonymously just 
 like an application called Whisper</p>
-                <img class="img-responsive img-centered img-fluid" src="img/portfolio/Secrets Screenshot.png" alt="">
+                <img class="img-responsive img-centered img-fluid" src="img/portfolio/Secrets Screenshot.PNG" alt="">
                 <!-- <img class="img-responsive img-centered" src="img/portfolio/screenshotFriend2.png" alt=""> -->
                 <p>Frontend and Backend Web App</p>
                 <p>
@@ -900,7 +900,7 @@ like an application called Whisper</p>
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">YouExpress</h2>
                 <p class="item-intro text-muted">Using JavaScript and Recording Voice API</p>
-                <img class="img-responsive img-centered img-fluid" src="img/portfolio/YouExpress Screenshot.png" alt="">
+                <img class="img-responsive img-centered img-fluid" src="img/portfolio/YouExpress Screenshot.PNG" alt="">
                 <!-- <img class="img-responsive img-centered" src="img/portfolio/screenshotVR2.png" alt=""> -->
                 <p>YouExpress is video website like Youtube but with the addition of posting and playing voice comments</p>
                 <p>
@@ -946,7 +946,7 @@ like an application called Whisper</p>
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Newsletter</h2>
                 <p class="item-intro text-muted">Frontend and Backend</p>
-                <img class="img-responsive img-centered img-fluid" src="img/portfolio/Newsletter Screenshot.png" alt="">
+                <img class="img-responsive img-centered img-fluid" src="img/portfolio/Newsletter Screenshot.PNG" alt="">
                 <!-- <img class="img-responsive img-centered" src="img/portfolio/screenshotNYT2.png" alt=""> -->
                 <p>Subscription Newsletter Service</p>
                 <p>
@@ -991,9 +991,9 @@ like an application called Whisper</p>
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Streamy Covid19</h2>
                 <p class="item-intro text-muted">Streamlit Machine Learning Deep Learning Tensorflow</p>
-                <img class="img-responsive img-centered img-fluid" src="img/portfolio/Streamy xray in action screenshot.png" alt="">
+                <img class="img-responsive img-centered img-fluid" src="img/portfolio/Streamy xray in action screenshot.PNG" alt="">
 				<img class="img-responsive img-centered img-fluid" src="img/portfolio/streamy in action ct screenshot.png" alt="">
-				<img class="img-responsive img-centered img-fluid" src="img/portfolio/multiclass streamy xray covid19 5.png" alt="">
+				<img class="img-responsive img-centered img-fluid" src="img/portfolio/multiclass streamy xray covid19 5.PNG" alt="">
                 <p>A Large project and streamlit web application for detecting Covid19 in Human Chest Imagery whether in Xray and/or CT chest scans</p>
                 <p>
                   <strong>
@@ -1036,8 +1036,8 @@ like an application called Whisper</p>
               <!-- Project Details Go Here -->
               <h2 class="text-uppercase">Fgg Covid19</h2>
               <p class="item-intro text-muted">Flask, AJAX, Google Cloud, Machine and Deep Learning Tensorflow</p>
-              <img class="img-responsive img-centered img-fluid" src="img/portfolio/Multiclass Home Up Flask Web Application.png" alt="">
-              <img class="img-responsive img-centered img-fluid" src="img/portfolio/CT Covid19 Button.png" alt="">
+              <img class="img-responsive img-centered img-fluid" src="img/portfolio/Multiclass Home Up Flask Web Application.PNG" alt="">
+              <img class="img-responsive img-centered img-fluid" src="img/portfolio/CT Covid19 Button.PNG" alt="">
 			  <img class="img-responsive img-centered img-fluid" src="img/portfolio/Flask Web App in Action Multiclass on CT.png" alt="">
               <p>A Large project and custom Flask web application hosted on Google Cloud, for detecting Covid19 in Human Chest Imagery whether in Xray and/or CT chest scans</p>
 			  <p>
