--- a/portfolio.html
+++ b/portfolio.html
@@ -991,7 +991,7 @@ like an application called Whisper</p>
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Streamy Covid19</h2>
                 <p class="item-intro text-muted">Streamlit Machine Learning Deep Learning Tensorflow</p>
-                <img class="img-responsive img-centered img-fluid" src="img/portfolio/Streamy xray in action screenshot.PNG" alt="">
+                <img class="img-responsive img-centered img-fluid" src="img/portfolio/Streamy xray in action screenshot.png" alt="">
 				<img class="img-responsive img-centered img-fluid" src="img/portfolio/streamy in action ct screenshot.png" alt="">
 				<img class="img-responsive img-centered img-fluid" src="img/portfolio/multiclass streamy xray covid19 5.PNG" alt="">
                 <p>A Large project and streamlit web application for detecting Covid19 in Human Chest Imagery whether in Xray and/or CT chest scans</p>
