--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
     <hr>
     <button class= "buty mx-auto text-center" onclick="window.location.href='portfolio.html';">Portfolio</button>
     <hr>
+    <a href="Ramy Salah Elsaraf CV 20 2.pdf" class="neon">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            CV
+        </a>
     <div class="contact-me">
       <h2 class=getintouchheader>Get In Touch</h2>
       <h3 class=getintouchmessage>Thank you Sincerly for visiting my website, and feel free to contact me.</h3>
