--- a/portfolio.html
+++ b/portfolio.html
@@ -911,7 +911,7 @@ like an application called Whisper</p>
                 <img class="img-responsive img-centered img-fluid" src="img/portfolio/YouExpress Screenshot.PNG" alt="">
                 <!-- <img class="img-responsive img-centered" src="img/portfolio/screenshotVR2.png" alt=""> -->
 		      
-		<video controls width="320" height="240" autoplay class="img-responsive img-centered" poster="img/portfolio/YouExpress thumbnail 1.png">
+		<video controls width="320" height="240" autoplay class="img-responsive img-centered" poster="img/portfolio/YouExpress thumbnail 1.PNG">
                 <source src="video/portfolio/YouExpress Short Walkthrough.webm" type="video/webm">
                 <source src="video/portfolio/YouExpress Short Walkthrough.mp4" type="video/mp4">
                 Your browser does not support the video tag.
