--- a/portfolio.html
+++ b/portfolio.html
@@ -919,7 +919,7 @@ like an application called Whisper</p>
 				
 		<br><br>
 
-		    <iframe class="img-responsive img-centered" width="700" height="538" src="https://www.youtube.com/embed/8Z58iA7Rkjg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		    <div class="responsive"><iframe class="img-responsive img-centered" width="700" height="538" src="https://www.youtube.com/embed/8Z58iA7Rkjg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 			<!-- <iframe class="img-responsive img-centered" width="700" height="538" align="middle" src="https://www.youtube.com/embed/ZelZCubN0Kc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 				<br><br>
 		      
