--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 
@@ -62,6 +64,8 @@
     <hr>
     <button class= "buty mx-auto text-center" onclick="window.location.href='portfolio.html';">Portfolio</button>
     <hr>
+    <button class= "academia" onclick="window.location.href='https://independent.academia.edu/RamySalahElsaraf';">Academia <i class="fa fa-university"></i></button>
+	  <hr>
     <a href="Ramy Salah Elsaraf CV 22.pdf" class="neon">
             <span></span>
             <span></span>
