--- a/portfolio.html
+++ b/portfolio.html
@@ -739,7 +739,7 @@ like an application called Whisper</p>
                   <br>
                   <p>
                     <strong>
-                      <a href="https://github.com/Ramy9999/Bulldogy-Snuggle"> Check our Github here</a> 
+                      <a href="https://github.com/Ramy9999/Bulldogy-Snuggle">My Github is here</a> 
 					  <br>
                       <a href="https://ramy9999.github.io/Bulldogy-Snuggle/">Website for Bulldogy Snuggle</a>
                   </p>
