--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="contact-me">
       <h2 class=getintouchheader>Get In Touch</h2>
       <h3 class=getintouchmessage>Thank you Sincerly for visiting my website, and feel free to contact me.</h3>
-      <p class=endpar>Looking for an opportunity to Become a part of a team where I can broad up my vision and develop my professional skills in the field of Software and Computer Engineering, Electrical Engineering, Electronics and/or IT Networks.
+      <p class=endpar>Looking for an opportunity to become a part of a team where I can broaden my vision and develop my professional skills in the field of Software and/or Computer Engineering, Electrical Engineering, Electronics and/or IT Networks.
       </p>
       <a class="contactlinkbtn" href="mailto:ramysarraf93@gmail.com">CONTACT ME</a>
     </div>
