--- a/portfolio.html
+++ b/portfolio.html
@@ -38,29 +38,21 @@
         Menu
         <i class="fa fa-bars"></i>
       </button>
-      <!-- <div class="collapse navbar-collapse" id="navbarResponsive"> -->
-        <!-- <ul class="navbar-nav text-uppercase ml-auto"> -->
-          <!-- <li class="nav-item"> -->
-            <!-- <a class="nav-link js-scroll-trigger" href="#services">Services</a> -->
-          <!-- </li> -->
-          <!-- <li class="nav-item"> -->
-            <!-- <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a> -->
-          <!-- </li> -->
-          <!-- <li class="nav-item"> -->
-            <!-- <a class="nav-link js-scroll-trigger" href="#about">About</a> -->
-          <!-- </li> -->
-          <!-- <li class="nav-item"> -->
-              <!-- <a class="nav-link js-scroll-trigger" href="#blog">Blog</a> -->
-            <!-- </li>  -->
-          <!-- <li class="nav-item"> -->
-            <!-- <a class="nav-link js-scroll-trigger" href="#contact">Contact</a> -->
-          <!-- </li> -->
-        <!-- </ul> -->
-      <!-- </div> -->
+      <div class="collapse navbar-collapse" id="navbarResponsive"> -->
+        <ul class="navbar-nav text-uppercase ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger active" href="#portfolio">Portfolio</a>
+          </li>
+          <li class="nav-item"> 
+             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a> 
+          </li> 
+        </ul> 
+      </div>
     </div>
   </nav>
-
-
 
   <!-- Header -->
   <header class="masthead">
@@ -631,8 +623,9 @@ like an application called Whisper</p>
       </div>
       <div class="row">
         <div class="col-lg-12">
-          <form id="contactForm" accept-charset="UTF-8" action="https://formkeep.com/f/55047257c9ce" method="POST" name="sentMessage"
-            novalidate="novalidate">
+          <!-- <form id="contactForm" accept-charset="UTF-8" action="https://formsubmit.co/ramysarraf93@gmail.com" method="POST" name="sentMessage" -->
+            <!-- novalidate="novalidate"> -->
+			<form action="https://formsubmit.co/ramysarraf93@gmail.com" method="POST" />
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
@@ -645,8 +638,13 @@ like an application called Whisper</p>
                     data-validation-required-message="Please enter your email address.">
                   <p class="help-block text-danger"></p>
                 </div>
+				<div class="form-group">
+                  <input class="form-control" name="_subject" id="_subject" type="text" placeholder="Subject *" required="required"
+                    data-validation-required-message="Please enter the subject.">
+                  <p class="help-block text-danger"></p>
+                </div>
                 <div class="form-group">
-                  <input class="form-control" name="phone" id="phone" type="tel" placeholder="Your Phone *" required="required"
+                  <input class="form-control" name="phone" id="phone" type="number" placeholder="Your Phone *" required="required"
                     data-validation-required-message="Please enter your phone number.">
                   <p class="help-block text-danger"></p>
                 </div>
