--- a/portfolio.html
+++ b/portfolio.html
@@ -1251,7 +1251,7 @@ like an application called Whisper</p>
 And that is it, now the images of the video are saved and their text is written to a text file and then that same text file is analyzed and used for Machine Learning Topic Modelling, you can see the results in the rest of the cells in and after the section: Topic Modelling from fetched Text From Video</p>
                 <p>
                   <strong>
-                    <a href="https://www.youtube.com/redirect?event=video_description&redir_token=QUFFLUhqbnc1cUVpNUJ4NTV4SjFDWWpQT3lENDN6QTdHZ3xBQ3Jtc0tubXM5YXN6YWRmSkUyTm0tMy1LdWMzcDZGSkFfaXRmZXh0cFBJa1ktZng2Nmo0Uk10UXVIRU1RVnlOY19PXzM0V3U4TWNIYUY0NEpNeFVCWkIzQjh5T1c4OUJyMjRlLVdNc09qWVd1TmRLRVlXbEc1dw&q=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1Dgacsdr-JLz9wRAWumZNtcjyW5KrdGLO%2Fview%3Fusp%3Dsharing&v=t-Sd95e2aXk">Download the ML Project Google Colab Notebook</a>
+                    <a href="https://drive.google.com/file/d/1Dgacsdr-JLz9wRAWumZNtcjyW5KrdGLO/view?usp=sharing">Download the ML Project Google Colab Notebook</a>
 					<br><br>
                     <a href="https://www.youtube.com/watch?v=t-Sd95e2aXk">Watch the ML Project Video</a>
                   </strong>
