--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
         Menu
         <i class="fa fa-bars"></i>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive"> -->
+      <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html">Home</a>
