--- a/portfolio.html
+++ b/portfolio.html
@@ -1119,7 +1119,7 @@ like an application called Whisper</p>
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">ML VideoToText and Topic Modelling</h2>
+                <h2 class="text-uppercase bigText">ML VideoToText and Topic Modelling</h2>
                 <p class="item-intro text-muted">Machine Learning (ML), OCR, OpenCV, Pytesseract, ML LDA (Latent Dirichlet Allocation) Topic Modelling</p>
 				<img class="img-responsive img-centered img-fluid" src="img/portfolio/Machine Learning project overview Portfolio.PNG" alt="">
 				
