--- a/portfolio.html
+++ b/portfolio.html
@@ -1454,7 +1454,7 @@ And that is it, now the images of the video are saved and their text is written 
                 </div>
 				<div style="flex: 33.33%; padding: 5px;">
 				<img class="img-responsive img-centered img-fluid" style="display: block; flex: 33.33%; padding: 5px; margin-left: auto; margin-right: auto;"
-                  src="img/portfolio/doctor block 2.png" alt="">
+                  src="img/portfolio/block patient right 3.png" alt="">
                 </div>
 				
 				</div>
