--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Web Developer Ramy 🌐</title>
+  <title>Software Developer Ramy 🌐</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com"> 
@@ -40,7 +40,7 @@
   <div class="top">
     <img src="images/animated_cloud_2-removebackground.png" class=cloud-top alt="animated cloud image" width="200px" height="100px">
     <h1>I'm Ramy.</h1>
-    <p class=par1>a fullstack web developer.</p>
+    <p class=par1>a fullstack software developer.</p>
     <img src="images/cloud animated 1.jpg" class=cloud-bottom alt="another animated cloud image" width="150px" height="75px"> <br> <br> <br><br> <br> <br>
     <img src="images/animated rainbow.jpg" class=rainbow-bottom alt="animated rainbow image" width="600px" height="400px">
 
@@ -59,7 +59,7 @@
         <img class="progimage1" src="images/giphy programming 1.gif" alt="first programming image">
         <h3>Programming</h3>
         <p> having a bachelor degree with honours in computer science and software engineering and masters in computer science and engineering, I have wide knowledge and expertise in programming languages such as C#, C/C++, ASP.net, Java and Android,
-          Javascript, CSS, HTML and Python. I also can program hardware devices and circuits such as PCBs, FPGA and embedded computer devices; using technologies such as keilUvision and HDLs such as Verilog and VHDL.</p>
+          Javascript, CSS, HTML and Python. I also can program hardware devices and circuits such as PCBs, FPGA and embedded computer devices; using technologies such as keilUvision and HDLs such as VHDL.</p>
       </div>
       <div class="skill-row">
         <img class="progimage2" src="images/programming 2 skill.png" alt="second programming image">
@@ -101,7 +101,7 @@
     <a class="footer-link" href="https://www.linkedin.com/in/ramy-elsaraf-8a6336177/">LinkedIn</a>
     <a class="footer-link" href="https://teamtreehouse.com/profiles/ramyelsaraf">Treehouse</a>
     <a class="footer-link" href="https://github.com/Ramy9999">GitHub</a>
-    <p class=copyrightpar>Copyright © <script> new Date().getFullYear() </script> 2023 Ramy Elsaraf, @Ramware Corporation.</p>
+    <p class=copyrightpar>Copyright © <script> new Date().getFullYear() </script>Copyright @ 2023 by Ramy Elsaraf.</p>
   </div>
 
   <!--<span><a href="https://www.youtube.com">Click Me</a>(This is a Span)</span>
