--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Software Developer Ramy 🌐</title>
+  <title>Developer Ramy 🌐</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com"> 
@@ -101,7 +101,7 @@
     <a class="footer-link" href="https://www.linkedin.com/in/ramy-elsaraf-8a6336177/">LinkedIn</a>
     <a class="footer-link" href="https://teamtreehouse.com/profiles/ramyelsaraf">Treehouse</a>
     <a class="footer-link" href="https://github.com/Ramy9999">GitHub</a>
-    <p class=copyrightpar>Copyright © <script> new Date().getFullYear() </script>Copyright @ 2023 by Ramy Elsaraf.</p>
+    <p class=copyrightpar>Copyright © <script> new Date().getFullYear() </script>2023 by Ramy Elsaraf.</p>
   </div>
 
   <!--<span><a href="https://www.youtube.com">Click Me</a>(This is a Span)</span>
