--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
         <h3>Mobile and Web Development</h3>
         <p> I built the prototype of, a <strong>Mobile Medical Application</strong> that eases up the process between the patient and the medical practitioner and provides a well sufficient rating system which the patient can use to rate and interact
           with the doctor and the medical practitioner, furthermore it has a diagnosis and online booking system. (Mobile Application Development).
-          And, a <strong>Website</strong> that has all the latest computer and technological gadgets, equipment’s and devices and gathers them up and their prices from various websites and provides the links with the best prices, ratings and reviews
-          and all products are updated. (Web Development).</p>
+          And, a <strong>Website or Web Application</strong> that detects COVID-19 in people's chest scans, whether Xrays, CTs (Chest Tomography) or both together; using Machine and Deep Learning. (Web Development).</p>
       </div>
       <div class="skill-row">
         <img class="mathimage3" src="images/Math Skill.jpg" alt="math image">
