--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="skill-row">
         <img class="progimage2" src="images/programming 2 skill.png" alt="second programming image">
         <h3>Mobile and Web Development</h3>
-        <p> I built the prototype of, a <strong>Mobile Medical Application</strong> that eases up the process between the patient and the medical practitioner and provides a well sufficient rating system which the patient can use to rate and interact
+        <p> I built a <strong>Mobile Medical Application</strong> that eases up the process between the patient and the medical practitioner and provides a well sufficient rating system which the patient can use to rate and interact
           with the doctor and the medical practitioner, furthermore it has a diagnosis and online booking system. (Mobile Application Development).
           And, a <strong>Website or Web Application</strong> that detects COVID-19 in people's chest scans, whether Xrays, CTs (Chest Tomography) or both together; using Machine and Deep Learning. (Web Development).</p>
       </div>
