--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="profile">
       <img class=profpic src="images/Ramy's profile pic.jpg" alt="ramy's profile image">
       <h2>Hello I'm Ramy.</h2>
-      <p><em>a Software and Computer Engineer with 📖 <strong>Masters of MSc (Eng)</strong> in Computer Science and Engineering.</em></p>
+      <p><em>a Software and Computer Engineer with 📖 <strong>Masters of MSc (Eng) and MASc</strong> in Computer Science and Engineering.</em></p>
     </div>
     <hr>
     <div class="skills">
@@ -58,20 +58,20 @@
       <div class="skill-row">
         <img class="progimage1" src="images/giphy programming 1.gif" alt="first programming image">
         <h3>Programming</h3>
-        <p> having a bachelor degree with honours in computer science and software engineering and masters in computer science and engineering, I have wide knowledge and expertise in programming languages such as C#, C/C++, ASP.net, Java and Android,
-          Javascript, CSS, HTML and Python. I also can program hardware devices and circuits such as PCBs, FPGA and embedded computer devices; using technologies such as keilUvision and HDLs such as VHDL.</p>
+        <p> Having a bachelor's degree with honours in computer science and software engineering, and masters in computer science and engineering; I have wide knowledge and expertise in programming languages such as C#, C/C++, ASP.net, Java and Android,
+          Javascript, CSS, HTML, PHP Laravel and Python. I also can program hardware devices and circuits such as PCBs, FPGAs and embedded computer devices; using technologies such as Keil µVision and HDLs such as VHDL.</p>
       </div>
       <div class="skill-row">
         <img class="progimage2" src="images/programming 2 skill.png" alt="second programming image">
         <h3>Mobile and Web Development</h3>
-        <p> I built a <strong>Mobile Medical Application</strong> that eases up the process between the patient and the medical practitioner and provides a well sufficient rating system which the patient can use to rate and interact
-          with the doctor and the medical practitioner, furthermore it has a diagnosis and online booking system. (Mobile Application Development).
+        <p> I built a <strong>Mobile Medical Application</strong> that eases up the process between the patient and medical practitioner, and provides a well sufficient rating system which the patient can use to rate and interact
+          with the doctor and medical practitioner. Furthermore, it has a diagnosis and online booking system. (Mobile Application Development).
           And, a <strong>Website or Web Application</strong> that detects COVID-19 in people's chest scans, whether Xrays, CTs (Chest Tomography) or both together; using Machine and Deep Learning. (Web Development).</p>
       </div>
       <div class="skill-row">
         <img class="mathimage3" src="images/Math Skill.jpg" alt="math image">
         <h3>Mathematics</h3>
-        <p>I have high Mathematical skills and possess extensive knowledge and advanced aspects of Mathematics that I understand very easily; I'm well versed in topics such as Calculus, Linear Algebra and Differentiation.</p>
+        <p>I have great Mathematical skills and possess extensive knowledge of advanced aspects of Mathematics that I understand very easily; being well versed in topics such as Calculus, Linear Algebra and Differentiation.</p>
       </div>
     </div>
     <hr>
@@ -89,7 +89,7 @@
     <div class="contact-me" id="contact">
       <h2 class=getintouchheader>Get In Touch</h2>
       <h3 class=getintouchmessage>Thank you Sincerly for visiting my website, and feel free to contact me.</h3>
-      <p class=endpar>Looking for an opportunity to become a part of a team where I can broaden my vision and develop my professional skills in the field of Software and/or Computer Engineering, Electrical Engineering, Electronics and/or IT Networks.
+      <p class=endpar>Looking for an opportunity to become a part of a team where I can broaden my vision and further develop my professional skills in the field of Software and/or Computer Engineering, Electrical Engineering, Electronics and/or IT Networks.
       </p>
       <a class="contactlinkbtn" href="mailto:ramysarraf93@gmail.com">CONTACT ME</a>
     </div>
