--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <img class="progimage2" src="images/programming 2 skill.png" alt="second programming image">
         <h3>Mobile and Web Development</h3>
         <p> I built a <strong>Mobile Medical Application</strong> that greatly eases the process between the patient and medical practitioner, and provides a well-sufficient rating system that the patient can use to rate and interact
-          with the doctor and medical practitioner. Furthermore, it has a diagnosis and online booking system. (Mobile Application Development).
+          with the doctor and medical practitioner. Furthermore, it has a diagnosis and online booking system. (Mobile Application Development).<br>
           I also built and launched, a <strong>Website or Web Application</strong> that detects COVID-19 in people's chest scans, whether Xrays, CTs (Chest Tomography), or both together; using Machine and Deep Learning. (Web Development).</p>
       </div>
       <div class="skill-row">
