--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Portfolio</h2>
-          <h3 class="section-subheading text-muted">These are web applications I built along with projects I'm currently
+          <h3 class="section-subheading text-muted">These are web applications I built, and there are other projects I'm currently
             working on!</h3>
         </div>
       </div>
@@ -275,8 +275,10 @@ like an application called Whisper</p>
 
         <br><br><br><br><br><br><br><br>
 		
-		<h3 style="font-size:19px; font-weight:lighter; margin:auto;">These are mobile applications I built along with projects I'm currently
+		<h3 class="section-subheading text-muted">These are mobile applications I built, and there are other projects I'm currently
             working on!</h3>
+	      <!--<h3 style="font-size:19px; font-weight:lighter; margin:auto;">These are mobile applications I built along with projects I'm currently
+            working on!</h3>-->
         <br><br>
         <br><br>
         		
