--- a/portfolio.html
+++ b/portfolio.html
@@ -257,7 +257,7 @@ like an application called Whisper</p>
           </div>
         </div>      
 
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-12 col-sm-12 col-lg-12 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal9">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
@@ -274,12 +274,6 @@ like an application called Whisper</p>
         </div>
 
         <br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br>
 	      <div class="row">
         <div class="col-lg-12 text-center">
