--- a/portfolio.html
+++ b/portfolio.html
@@ -287,7 +287,7 @@ like an application called Whisper</p>
         <br><br>
         		
 
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-12 col-sm-12 col-lg-12 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal10">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
