--- a/portfolio.html
+++ b/portfolio.html
@@ -275,9 +275,9 @@ like an application called Whisper</p>
 
         <br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br>
-	      <div class="row">
+	      <div class="row text-center">
         <div class="col-lg-12 text-center">
-          <h3 class="section-subheading text-muted">These are mobile applications I built, and there are other projects I'm currently
+          <h3 class="section-subheading text-muted text-center txtAlCenter">These are mobile applications I built, and there are other projects I'm currently
             working on!</h3>
         </div>
       </div>
