--- a/portfolio.html
+++ b/portfolio.html
@@ -276,7 +276,7 @@ like an application called Whisper</p>
         <br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br>
 	 
-          <h3 class="section-subheading text-muted text-center txtAlCenter">These are mobile applications I built, and there are other projects I'm currently
+          <h3 class="section-subheading text-muted txtAlCenter">These are mobile applications I built, and there are other projects I'm currently
             working on!</h3>
 	      
 	      <!--<h3 style="font-size:19px; font-weight:lighter; margin:auto;">These are mobile applications I built along with projects I'm currently
