Update index.html amar elmoon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Developer Ramy 🌐</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="Amar_El_Moon-removebg-preview.ico">
+  <link rel="icon" href="Amar_El_Moon-removebg-preview-256x256.png">
   <link rel="preconnect" href="https://fonts.gstatic.com"> 
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet">
