--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="Amar_El_Moon-removebg-preview-512x512.png">
   
 
   <!-- Custom fonts for this template -->
