--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="header__logo-img-cont">
             <img
               src="./assets/png/ramy-photo-large.jpg"
-              alt="Ramu Image"
+              alt="Ramy Image"
               class="header__logo-img"
             />
           </div>
@@ -35,7 +35,7 @@
         <div class="header__main">
           <ul class="header__links">
             <li class="header__link-wrapper">
-              <a href="./index.html" class="header__link"> Home </a>
+              <a href="./index.html#home" class="header__link"> Home </a>
             </li>
 			<li class="header__link-wrapper">
               <a href="./index.html#about" class="header__link">About </a>
@@ -73,7 +73,7 @@
         <div class="header__sm-menu-content">
           <ul class="header__sm-menu-links">
             <li class="header__sm-menu-link">
-              <a href="./index.html"> Home </a>
+              <a href="./index.html#home"> Home </a>
             </li>
 
             <li class="header__sm-menu-link">
@@ -99,7 +99,7 @@
         </div>
       </div>
     </header>
-    <section class="home-hero">
+    <section class="home-hero" id="home">
       <div class="home-hero__content">
         <h1 class="heading-primary">Hey, My name is Ramy Elsarf</h1>
         <div class="home-hero__info">
