--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
     </header>
     <section class="home-hero" id="home">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is Ramy Elsarf</h1>
+        <h1 class="heading-primary">Hey, My name is Ramy Elsaraf</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            A Software and Computer Engineer with 📖 Masters of MSc (Eng) and MASc in Computer Science and Engineering.
+            I am a Software and Computer Engineer with 📖 Masters of MSc (Eng) and MASc in Computer Science and Engineering.
           </p>
         </div>
         <div class="home-hero__cta">
