--- a/index.html
+++ b/index.html
@@ -205,16 +205,17 @@ I also built and launched a <strong> Website or Web Application </strong> that d
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
               <div class="skills__skill">React and Vue</div>
-			  <div class="skills__skill">Python</div>
-			  <div class="skills__skill">ASP.Net</div>
-			  <div class="skills__skill">Laravel</div>
+	      <div class="skills__skill">Python</div>
+	      <div class="skills__skill">ASP.Net</div>
+	      <div class="skills__skill">Laravel</div>
               <div class="skills__skill">REST APIs Development</div>
               <div class="skills__skill">SQL</div>
-			  <div class="skills__skill">Software Testing and Selenium</div>
+	      <div class="skills__skill">Software Testing and Selenium</div>
               <div class="skills__skill">DevOps</div>
               <div class="skills__skill">Android</div>
-			  <div class="skills__skill">GIT</div>
-			  <div class="skills__skill">AI, Machine and Deep Learning</div>
+	      <div class="skills__skill">GIT</div>
+	      <div class="skills__skill">Full-Stack Software Development</div>
+	      <div class="skills__skill">AI, Machine and Deep Learning</div>
               <div class="skills__skill">Data Science and Analysis</div>
               
             </div>
