--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ I also built and launched a <strong> Website or Web Application </strong> that d
                 This is my research that I have done in the fields of Software, Computer Engineering and Science, GPU Programming, AI, Machine and Deep Learning!
               </p>
               
-			  <div id="academia"><button class= "academia" onclick="window.location.href='https://independent.academia.edu/RamySalahElsaraf';">Academia <i class="fa fa-university"></i></button></div>
+			  <div><button class= "academia" onclick="window.location.href='https://independent.academia.edu/RamySalahElsaraf';">Academia <i class="fa fa-university"></i></button></div>
             </div>
           </div>
         </div>
