--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ I also built and launched a <strong> Website or Web Application </strong> that d
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Thank you Sincerly for visiting my website, and feel free to contact me.
+            Thank you sincerely for visiting my website, and feel free to contact me.
           </span>
         </h2>
         <div class="contact__form-container">
