--- a/portfolio.html
+++ b/portfolio.html
@@ -1306,7 +1306,7 @@ And that is it, now the images of the video are saved and their text is written 
                 <p class="item-intro text-muted">SQL, Javascript, Python, React, Flutter and Others!</p>
                 <img class="img-responsive img-centered img-fluid" src="img/portfolio/programming languages.jpeg" alt="">
                 <!-- <img class="img-responsive img-centered" src="img/portfolio/goals2.png" alt=""> -->
-                <p>Coming Soon!</p>
+                <p>Coming!</p>
                 <!-- <p> -->
                   <!-- <strong> -->
                     <!-- <a href="https://github.com/MJOAN/Goals-Planner">My Github is here</a> and -->
