--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a href="./index.html#contact" class="header__link"> Contact </a>
             </li>
 			<li class="header__link-wrapper borderlist">
-              <a href="Ramy-Elsaraf-CV-27-10-Newest H fr MP New.pdf" class="header__link"> Resume </a>
+              <a href="Ramy Elsaraf CV MP.pdf" class="header__link"> Resume </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
@@ -93,7 +93,7 @@
             </li>
 			
 	    <li class="header__sm-menu-link borderlist">
-              <a href="Ramy-Elsaraf-CV-27-10-Newest H fr MP New.pdf"> Resume </a>
+              <a href="Ramy Elsaraf CV MP.pdf"> Resume </a>
             </li>
           </ul>
         </div>
