--- a/portfolio.html
+++ b/portfolio.html
@@ -1039,7 +1039,7 @@ like an application called Whisper</p>
                   <strong>
                     <a href="https://github.com/Ramy9999/streamy">My Github is here</a>
 					<br>
-                    <a href="https://share.streamlit.io/ramy9999/streamy/main/app.py">Website for Streamy Covid19</a>
+                    <a href="https://ramy9999-streamy-app-rqzkvv.streamlit.app">Website for Streamy Covid19</a>
                   </strong>
                 </p>
                 <!-- <ul class="list-inline"> -->
